--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ matplotlib==3.10.1
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.1.1
+opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
@@ -31,15 +32,16 @@ PyYAML==6.0.2
 requests==2.32.3
 scipy==1.15.2
 seaborn==0.13.2
+setuptools==78.1.0
 six==1.17.0
 sympy==1.13.1
-torch==2.6.0+cu126
-torchaudio==2.6.0+cu126
-torchvision==0.21.0+cu126
+torch==2.6.0
+torchvision==0.21.0
 tqdm==4.67.1
 typing_extensions==4.13.0
 tzdata==2025.2
 ultralytics==8.3.97
 ultralytics-thop==2.0.14
 urllib3==2.3.0
+waitress==3.0.2
 Werkzeug==3.1.3
